its still showing.

--- a/src/components/cube/Cube.css
+++ b/src/components/cube/Cube.css
@@ -41,3 +41,12 @@
 .cube-face-bottom {
   transform: rotateX(-90deg) translateZ(100px);
 }
+
+.cube-face-inner-left {
+  transform: rotateY(-90deg) translateZ(0px);
+  background-color: hsl(var(--card));
+}
+.cube-face-inner-right {
+  transform: rotateY(90deg) translateZ(0px);
+  background-color: hsl(var(--card));
+}
