--- a/src/components/cube/Cube.css
+++ b/src/components/cube/Cube.css
@@ -10,7 +10,7 @@
   position: relative;
   transform-style: preserve-3d;
   transform: translateZ(-100px);
-  background-color: hsl(var(--card));
+  background-color: transparent;
 }
 
 .cube-face {
