--- a/src/components/cube/Cube.css
+++ b/src/components/cube/Cube.css
@@ -17,7 +17,7 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  background: transparent;
+  background: black;
   display: flex;
   align-items: center;
   justify-content: center;
