--- a/src/components/cube/Cube.css
+++ b/src/components/cube/Cube.css
@@ -28,32 +28,26 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  background: black;
+  padding: 3px;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  overflow: hidden; /* Keep the gradient inside the face */
-}
-
-.cube-face::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border: 3px solid transparent;
-  background: linear-gradient(45deg, hsl(var(--accent)), hsl(var(--accent) / 0.4), hsl(var(--accent))) border-box;
+  background: linear-gradient(45deg, hsl(var(--accent)), hsl(var(--accent) / 0.4), hsl(var(--accent)));
   background-size: 200% 200%;
   animation: gradient-flow 4s ease infinite;
-  -webkit-mask:
-    linear-gradient(#fff 0 0) content-box,
-    linear-gradient(#fff 0 0);
-  -webkit-mask-composite: xor;
-          mask-composite: exclude;
 }
 
+.cube-face-content {
+  width: 100%;
+  height: 100%;
+  background: black;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .cube-face-front {
   transform: rotateY(0deg) translateZ(100px);
